--- a/campesinoL.html
+++ b/campesinoL.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sorteio JuvEnart 2025</title>
+    <title>Sorteio JuvENART 2025</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
