Ajustes no radapé

--- a/campesinoL.html
+++ b/campesinoL.html
@@ -41,7 +41,7 @@
         </section>
     </main>
     <footer>
-        <p class="rodape">Desenvolvido por Nico</p>
+        <a class="rodape__principal" href="https://github.com/mateus250402">Desenvolvido por Nico</a>
     </footer>
     <script src="./js/listaCamp.js"></script>
 </body>
