--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="apresentacao__2">
         <div class="categorias">
             <img src="./assets/sq logo.png" class="imagens__logo">
-            <h1 class="titulo">JuvEnart 2026</h1>
+            <h1 class="titulo">JuvEnart 2025</h1>
             <img src="./assets/juvenart.jpeg" class="imagens__logo">
         </div>
         <h2 class="categoria">Categorias</h2>
@@ -38,7 +38,7 @@
 
     </main>
     <footer>
-        <p class="rodape">Desenvolvido por Nico</p>
+        <a class="rodape__principal" href="https://github.com/mateus250402">Desenvolvido por Nico</a>
     </footer>
 </body>
 </html>
