--- a/juniorC.html
+++ b/juniorC.html
@@ -122,7 +122,7 @@
         </section>
     </main>
     <footer>
-        <p class="rodape">Desenvolvido por Nico</p>
+        <a class="rodape" href="https://github.com/mateus250402">Desenvolvido por Nico</a>
     </footer>
     <script src="./js/sorteioJ.js"></script>
 </body>
