--- a/seniorG.html
+++ b/seniorG.html
@@ -137,7 +137,7 @@
         </section>
     </main>
     <footer>
-        <p class="rodape">Desenvolvido por Nico</p>
+        <a class="rodape" href="https://github.com/mateus250402">Desenvolvido por Nico</a>
     </footer>
     <script src="./js/sorteioS.js"></script>
 </body>
