--- a/campesinoG.html
+++ b/campesinoG.html
@@ -44,7 +44,7 @@
         </section>
     </main>
     <footer>
-        <p class="rodape">Desenvolvido por Nico</p>
+        <a class="rodape__principal" href="https://github.com/mateus250402">Desenvolvido por Nico</a>
     </footer>
     <script src="./js/sorteioCamp.js"></script>
 </body>
