--- a/juniorL.html
+++ b/juniorL.html
@@ -245,7 +245,7 @@
         </section>
     </main>
     <footer>
-        <p class="rodape">Desenvolvido por Nico</p>
+        <a class="rodape" href="https://github.com/mateus250402">Desenvolvido por Nico</a>
     </footer>
     <script src="./js/listaJ.js"></script>
 </body>
