Alteração para o link abrir em uma nova janela

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     </main>
     <footer>
-        <a class="rodape__principal" href="https://github.com/mateus250402">Desenvolvido por Nico</a>
+        <a class="rodape__principal" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
 </body>
 </html>
