--- a/seniorL.html
+++ b/seniorL.html
@@ -103,7 +103,7 @@
         </section>
     </main>
     <footer>
-        <a class="rodape" href="https://github.com/mateus250402">Desenvolvido por Nico</a>
+        <a class="rodape" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
     <script src="./js/listaS.js"></script>
 </body>
