Aperfeiçoamento de todos os códigos JS (eficiência) Refatoração e organização dos códigos JS Agora há um código para sorteio cabeça e um para geral (anteriormente função acumulada) Retirada de styles desnecessários Melhores nomes para todos os arquivos (mais descritivos)

--- a/campesinoLista.html
+++ b/campesinoLista.html
@@ -11,12 +11,12 @@
 <body>
     <header class="cabecalho">
         <a class="categorias__ir" href="index.html">Página Principal</a>
-        <a class="categorias__ir" href="campesinoG.html">Geral</a>
+        <a class="categorias__ir" href="campesinoGeral.html">Geral</a>
     </header>
     <main class="apresentacao">
         <section class="titulo__sub">
             <h1 class="titulo">JuvEnart 2025</h1>
-            <h2 class="sub__titulo">Categoria Sênior</h2>
+            <h2 class="sub__titulo">Categoria Campesino</h2>
             <h2 class="sub__titulo">Lista de Grupos</h2>
         </section>
         <section class="blocos">
@@ -24,10 +24,10 @@
                 <div class="blocos__bb">
                     <section class="blocos__ordem">
                         <div> <!--NUMERAÇÃO (ID 1 -> 35)-->
-                            <p id="1"></p>
-                            <p id="2"></p>
-                            <p id="3"></p>
-                            <p id="4"></p>
+                            <p id="1" ></p>
+                            <p id="2" ></p>
+                            <p id="3" ></p>
+                            <p id="4" ></p>
                         </div>
                         <div> <!--GRUPOS (ID 1001 -> 1035)-->
                             <p id="1001"></p>
@@ -41,9 +41,9 @@
         </section>
     </main>
     <footer>
-        <a class="rodape__principal" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
+        <a class="rodape" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
-    <script src="./js/listaCamp.js"></script>
+    <script src="./js/campesino/listaCampesino.js" type="module"></script>
 </body>
 
 </html>
