--- a/campesinoGeral.html
+++ b/campesinoGeral.html
@@ -20,23 +20,23 @@
         <section class="blocos">
             <div class="titulos__ordem"><!-- BLOCO 1 -->
                 <div class="botao__ajuste">
-                    <button onclick="exibirBlocosG()" class="botao">Sortear</button>
+                    <button id="botao" onclick="exibirGruposGeral()" class="botao">Sortear</button>
                 </div>
                 <h1 class="blocos__titulos">BLOCO 1 - 27/07</h1>
                 <div class="blocos__bb">
-                    <p class="bola__ver__animado1" id="b1">X</p>
+                    <p class="bola__ver__animado" id="b1">X</p>
                     <div class="blocos__ordem">
                         <div>
-                            <p class="tabela1" id="1">-</p>
-                            <p class="tabela2" id="2">-</p>
-                            <p class="tabela1" id="3">-</p>
-                            <p class="tabela2" id="4">-</p>
+                            <p class="tabela" id="1">-</p>
+                            <p class="tabela" id="2">-</p>
+                            <p class="tabela" id="3">-</p>
+                            <p class="tabela" id="4">-</p>
                         </div>
                         <div>
-                            <p class="tabela1h">12:00</p>
-                            <p class="tabela2h">12:20</p>
-                            <p class="tabela1h">12:40</p>
-                            <p class="tabela2h">13:00</p>
+                            <p class="tabelaH">12:00</p>
+                            <p class="tabelaH">12:20</p>
+                            <p class="tabelaH">12:40</p>
+                            <p class="tabelaH">13:00</p>
                         </div>
                     </div>
                 </div>
@@ -44,9 +44,9 @@
         </section>
     </main>
     <footer>
-        <a class="rodape__principal" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
+        <a class="rodape" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
-    <script src="./js/sorteioCamp.js"></script>
+    <script src="./js/campesino/sorteioCampesinoAtt.js" type="module"></script>
 </body>
 
 </html>
