--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <h2 class="categoria">Categorias</h2>
         <section class="categorias">
-            <a class="categorias__ir" href="seniorL.html">Sênior</a>
-            <a class="categorias__ir" href="juniorL.html">Junior</a>
-            <a class="categorias__ir" href="campesinoL.html">Campesino</a>
+            <a class="categorias__ir" href="seniorLista.html">Sênior</a>
+            <a class="categorias__ir" href="juniorLista.html">Junior</a>
+            <a class="categorias__ir" href="campesinoLista.html">Campesino</a>
         </section>
         <section class="apresentacao__2">
             <h2 class="categoria">Apoio</h2>
@@ -38,7 +38,7 @@
 
     </main>
     <footer>
-        <a class="rodape__principal" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
+        <a class="rodape" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
 </body>
 </html>
