--- a/juniorCabeca.html
+++ b/juniorCabeca.html
@@ -10,8 +10,8 @@
 
 <body>
     <header class="cabecalho">
-        <a class="categorias__ir" href="juniorL.html">Lista de Grupos</a>
-        <a class="categorias__ir" href="juniorG.html">Blocos</a>
+        <a class="categorias__ir" href="juniorLista.html">Lista de Grupos</a>
+        <a class="categorias__ir" href="juniorGeral.html">Blocos</a>
     </header>
     <main class="apresentacao">
         <section class="titulo__sub">
@@ -19,27 +19,27 @@
             <h2 class="sub__titulo">Categoria Junior</h2>
             <h2 class="sub__titulo">Cabeça de Chave</h2>
         </section>
+        <div class="botao__ajuste">
+            <button id="botao" class="botao">Sortear</button>
+        </div>
         <section class="blocos">
             <div class="titulo__sub"> <!-- BLOCO 1 -->
-                <div class="botao__ajuste">
-                    <button onclick="exibirBlocosC()" class="botao">Sortear</button>
-                </div>
                 <h1 class="blocos__titulos">BLOCO 1 - 25/07</h1>
                 <div class="blocos__bb">
                     <p class="bola__nao__ver"></p>
                     <section class="blocos__ordem">
-                        <p class="tabela1" id="101">-</p>
-                        <p class="tabela1h">11:00</p>
+                        <p class="tabela" id="101">-</p>
+                        <p class="tabelaH">11:00</p>
                     </section>
                 </div>
             </div>
             <div class="titulo__sub"> <!-- BLOCO 2 -->
                 <h1 class="blocos__titulos">BLOCO 2 - 25/07</h1>
                 <div class="blocos__bb">
-                    <p class="bola__ver__animado1" id="B1">X</p>
+                    <p class="bola__ver__animado" id="B1">X</p>
                     <section class="blocos__ordem">
-                        <p class="tabela2" id="102">-</p>
-                        <p class="tabela2h">15:00</p>
+                        <p class="tabela" id="102">-</p>
+                        <p class="tabelaH">15:00</p>
                     </section>
                 </div>
             </div>
@@ -48,31 +48,28 @@
                 <div class="blocos__bb">
                     <p class="bola__nao__ver"></p>
                     <section class="blocos__ordem">
-                        <p class="tabela1" id="103">-</p>
-                        <p class="tabela1h">19:00</p>
+                        <p class="tabela" id="103">-</p>
+                        <p class="tabelaH">19:00</p>
                     </section>
                 </div>
             </div>
             <div class="titulo__sub"> <!-- BLOCO 4 -->
-                <div class="botao__ajuste">
-                    <button onclick="exibirBlocosC()" class="botao">Sortear</button>
-                </div>
                 <h1 class="blocos__titulos">BLOCO 4 - 25/07</h1>
                 <div class="blocos__bb">
                     <p class="bola__nao__ver"></p>
                     <section class="blocos__ordem">
-                        <p class="tabela2" id="104">-</p>
-                        <p class="tabela2h">23:20</p>
+                        <p class="tabela" id="104">-</p>
+                        <p class="tabelaH">23:20</p>
                     </section>
                 </div>
             </div>
             <div class="titulo__sub"> <!-- BLOCO 5 -->
                 <h1 class="blocos__titulos">BLOCO 5 - 27/07</h1>
                 <div class="blocos__bb">
-                    <p class="bola__ver__animado1" id="B2">X</p>
+                    <p class="bola__ver__animado" id="B2">X</p>
                     <section class="blocos__ordem">
-                        <p class="tabela1" id="105">-</p>
-                        <p class="tabela1h">11:00</p>
+                        <p class="tabela" id="105">-</p>
+                        <p class="tabelaH">11:00</p>
                     </section>
                 </div>
             </div>
@@ -81,31 +78,28 @@
                 <div class="blocos__bb">
                     <p class="bola__nao__ver"></p>
                     <section class="blocos__ordem">
-                        <p class="tabela2" id="106">-</p>
-                        <p class="tabela2h">15:00</p>
+                        <p class="tabela" id="106">-</p>
+                        <p class="tabelaH">15:00</p>
                     </section>
                 </div>
             </div>
             <div class="titulo__sub"> <!-- BLOCO 7 -->
-                <div class="botao__ajuste">
-                    <button onclick="exibirBlocosC()" class="botao">Sortear</button>
-                </div>
                 <h1 class="blocos__titulos">BLOCO 7 - 26/07</h1>
                 <div class="blocos__bb">
                     <p class="bola__nao__ver"></p>
                     <section class="blocos__ordem">
-                        <p class="tabela1" id="107">-</p>
-                        <p class="tabela1h">19:00</p>
+                        <p class="tabela" id="107">-</p>
+                        <p class="tabelaH">19:00</p>
                     </section>
                 </div>
             </div>
             <div class="titulo__sub"> <!-- BLOCO 8 -->
                 <h1 class="blocos__titulos">BLOCO 8 - 26/07</h1>
                 <div class="blocos__bb">
-                    <p class="bola__ver__animado1" id="B3">X</p>
+                    <p class="bola__ver__animado" id="B3">X</p>
                     <section class="blocos__ordem">
-                        <p class="tabela2" id="108">-</p>
-                        <p class="tabela2h">23:20</p>
+                        <p class="tabela" id="108">-</p>
+                        <p class="tabelaH">23:20</p>
                     </section>
                 </div>
             </div>
@@ -114,8 +108,8 @@
                 <div class="blocos__bb">
                     <p class="bola__nao__ver"></p>
                     <section class="blocos__ordem">
-                        <p class="tabela1" id="109">CCTG Lila Alves - Invernada Alma Gaúcha - 21ª RT - Pinheiro Machado</p>
-                        <p class="tabela1h">11:20</p>
+                        <p class="tabela" id="109">-</p>
+                        <p class="tabelaH">11:20</p>
                     </section>
                 </div>
             </div>
@@ -124,7 +118,7 @@
     <footer>
         <a class="rodape" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
-    <script src="./js/sorteioJ.js"></script>
+    <script src="./js/junior/sorteioJuniorCabeca.js" type="module"></script>
 </body>
 
 </html>
