--- a/juniorLista.html
+++ b/juniorLista.html
@@ -11,7 +11,7 @@
 <body>
     <header class="cabecalho">
         <a class="categorias__ir" href="index.html">Página Principal</a>
-        <a class="categorias__ir" href="juniorC.html">Cabeça de Chave</a>
+        <a class="categorias__ir" href="juniorCabeca.html">Cabeça de Chave</a>
     </header>
     <main class="apresentacao">
         <section class="titulo__sub">
@@ -247,7 +247,7 @@
     <footer>
         <a class="rodape" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
-    <script src="./js/listaJ.js"></script>
+    <script src="./js/junior/listaJunior.js" type="module"></script>
 </body>
 
 </html>
