--- a/seniorCabeca.html
+++ b/seniorCabeca.html
@@ -10,8 +10,8 @@
 
 <body>
     <header class="cabecalho">
-        <a class="categorias__ir" href="seniorL.html">Lista de Grupos</a>
-        <a class="categorias__ir" href="seniorG.html">Blocos</a>
+        <a class="categorias__ir" href="seniorLista.html">Lista de Grupos</a>
+        <a class="categorias__ir" href="seniorGeral.html">Blocos</a>
     </header>
     <main class="apresentacao">
         <section class="titulo__sub">
@@ -20,10 +20,10 @@
             <h2 class="sub__titulo">Cabeça de Chave</h2>
         </section>
         <section class="blocos">
+            <div class="botao__ajuste">
+                <button id="botao" class="botao">Sortear</button>
+            </div>
             <div class="titulo__sub"><!-- BLOCO 1 -->
-                <div class="botao__ajuste">
-                    <button onclick="exibirBlocosC()" class="botao">Sortear</button>
-                </div>
                 <h1 class="blocos__titulos">BLOCO 1 - 27/07</h1>
                 <div class="blocos__bb">
                     <div>
@@ -31,14 +31,14 @@
                     </div>
                     <section class="blocos__ordem">
                         <div>
-                            <p class="tabela1" id="107">-</p>
-                            <p class="tabela2" id="104">-</p>
-                            <p class="tabela1" id="101">-</p>
+                            <p class="tabela" id="107">-</p>
+                            <p class="tabela" id="104">-</p>
+                            <p class="tabela" id="101">-</p>
                         </div>
                         <div>
-                            <p class="tabela1h">15:00</p>
-                            <p class="tabela2h">15:20</p>
-                            <p class="tabela1h">15:40</p>
+                            <p class="tabelaH">15:00</p>
+                            <p class="tabelaH">15:20</p>
+                            <p class="tabelaH">15:40</p>
                         </div>
                     </section>
                 </div>
@@ -46,17 +46,17 @@
             <div class="titulo__sub"><!-- BLOCO 2 -->
                 <h1 class="blocos__titulos">BLOCO 2 - 27/07</h1>
                 <div class="blocos__bb">
-                        <p class="bola__ver__animado1" id="b">X</p>
+                        <p class="bola__ver__animado" id="b">X</p>
                     <section class="blocos__ordem">
                         <div>
-                            <p class="tabela2" id="108">-</p>
-                            <p class="tabela1" id="105">-</p>
-                            <p class="tabela2" id="102">-</p>
+                            <p class="tabela" id="108">-</p>
+                            <p class="tabela" id="105">-</p>
+                            <p class="tabela" id="102">-</p>
                         </div>
                         <div>
-                            <p class="tabela2h">19:00</p>
-                            <p class="tabela1h">19:20</p>
-                            <p class="tabela2h">19:40</p>
+                            <p class="tabelaH">19:00</p>
+                            <p class="tabelaH">19:20</p>
+                            <p class="tabelaH">19:40</p>
                         </div>
                     </section>
                 </div>
@@ -69,16 +69,16 @@
                     </div>
                     <section class="blocos__ordem">
                         <div>
-                            <p class="tabela1" id="109">-</p>
-                            <p class="tabela2" id="106">-</p>
-                            <p class="tabela1" id="103">-</p>
-                            <p class="tabela2">CTG Rancho da Saudade - 1ª RT - Cachoeirinha</p>
+                            <p class="tabela" id="109">-</p>
+                            <p class="tabela" id="106">-</p>
+                            <p class="tabela" id="103">-</p>
+                            <p class="tabela">CTG Rancho da Saudade - 1ª RT - Cachoeirinha</p>
                         </div>
                         <div>
-                            <p class="tabela1h">22:20</p>
-                            <p class="tabela2h">22:40</p>
-                            <p class="tabela1h">23:00</p>
-                            <p class="tabela2h">23:20</p>
+                            <p class="tabelaH">22:20</p>
+                            <p class="tabelaH">22:40</p>
+                            <p class="tabelaH">23:00</p>
+                            <p class="tabelaH">23:20</p>
                         </div>
                     </section>
                 </div>
@@ -88,7 +88,7 @@
     <footer>
         <a class="rodape" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
-    <script src="./js/sorteioS.js"></script>
+    <script src="./js/senior/sorteioSeniorCabeca.js" type="module"></script>
 </body>
 
 </html>
