--- a/seniorLista.html
+++ b/seniorLista.html
@@ -11,7 +11,7 @@
 <body>
     <header class="cabecalho">
         <a class="categorias__ir" href="index.html">Página Principal</a>
-        <a class="categorias__ir" href="seniorC.html">Cabeça de Chave</a>
+        <a class="categorias__ir" href="seniorCabeca.html">Cabeça de Chave</a>
     </header>
     <main class="apresentacao">
         <section class="titulo__sub">
@@ -105,7 +105,7 @@
     <footer>
         <a class="rodape" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
-    <script src="./js/listaS.js"></script>
+    <script src="./js/senior/listaSenior.js" type="module"></script>
 </body>
 
 </html>
