--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MACACO 2025</title>
+    <title>JuvEnart 2025</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <main class="apresentacao__2">
         <div class="categorias">
             <img src="./assets/sq logo.png" class="imagens__logo">
-            <h1 class="titulo">JuvEnart 2025</h1>
+            <h1 class="titulo">MACACO 2025</h1>
             <img src="./assets/juvenart.jpeg" class="imagens__logo">
         </div>
         <h2 class="categoria">Categorias</h2>
