Adicionado sweetalert2 no sorteio

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="categorias">
             <img src="./assets/sq logo.png" class="imagens__logo">
             <h1 class="titulo">JuvEnart 2025</h1>
-            <img src="./assets/juvenart.jpeg" class="imagens__logo">
+            <img src="./assets/juvenart.png" class="imagens__logo">
         </div>
         <h2 class="categoria">Categorias</h2>
         <section class="categorias">
