--- a/seniorGeral.html
+++ b/seniorGeral.html
@@ -134,6 +134,7 @@
         <a class="rodape" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
     <script src="./js/senior/sorteioSeniorGeral.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
