--- a/campesinoGeral.html
+++ b/campesinoGeral.html
@@ -17,11 +17,11 @@
             <h1 class="titulo">JuvEnart 2025</h1>
             <h2 class="sub__titulo">Categoria Campesino</h2>
         </section>
+        <div class="botao__ajuste">
+            <button id="botao" onclick="exibirGruposGeral()" class="botao">Sortear</button>
+        </div>      
         <section class="blocos">
             <div class="titulos__ordem"><!-- BLOCO 1 -->
-                <div class="botao__ajuste">
-                    <button id="botao" onclick="exibirGruposGeral()" class="botao">Sortear</button>
-                </div>
                 <h1 class="blocos__titulos">BLOCO 1 - 27/07</h1>
                 <div class="blocos__bb">
                     <p class="bola__ver__animado" id="b1">X</p>
@@ -47,6 +47,7 @@
         <a class="rodape" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
     <script src="./js/campesino/sorteioCampesinoAtt.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
