--- a/juniorCabeca.html
+++ b/juniorCabeca.html
@@ -119,6 +119,7 @@
         <a class="rodape" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
     <script src="./js/junior/sorteioJuniorCabeca.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
