--- a/seniorCabeca.html
+++ b/seniorCabeca.html
@@ -19,10 +19,10 @@
             <h2 class="sub__titulo">Categoria Sênior</h2>
             <h2 class="sub__titulo">Cabeça de Chave</h2>
         </section>
+        <div class="botao__ajuste">
+            <button id="botao" class="botao">Sortear</button>
+        </div>
         <section class="blocos">
-            <div class="botao__ajuste">
-                <button id="botao" class="botao">Sortear</button>
-            </div>
             <div class="titulo__sub"><!-- BLOCO 1 -->
                 <h1 class="blocos__titulos">BLOCO 1 - 27/07</h1>
                 <div class="blocos__bb">
@@ -89,6 +89,7 @@
         <a class="rodape" href="https://github.com/mateus250402" target="_blank">Desenvolvido por Nico</a>
     </footer>
     <script src="./js/senior/sorteioSeniorCabeca.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
